# lane

./: CMakeLists.txt
matlab/: a1.m  lane.m  nsplit.m  rgbtolab.m
src/: gen_diff_mean.cpp  gen_diff_mean.h  gen_lane.cpp  histo.h  img_common.h  lan_env.cpp  mouse_crop.cpp  mouse_crop.h  rgb2lab.cpp  th1.cpp
